# xDPd-for-EZappliance-depracated

./: README  README.md  configure.ac  make.output
bin EZproxy/: ALIEN
config/: hw.m4
src/xdpd/: xdpd.cc
src/xdpd/fwd-modules/ezappliance/: AUTHORS  Makefile.am  README  configure.ac
src/xdpd/fwd-modules/ezappliance/src/: Makefile.am  bg_taskmanager.cc  config.cc  config.h  ls_internal_state.h
src/xdpd/fwd-modules/ezappliance/src/afa-imp/: Makefile.am  atest.cc  atest.h  forwarding_module.cc
src/xdpd/fwd-modules/ezappliance/src/afa-imp/openflow/openflow1x/: of1x_forwarding_module.cc
src/xdpd/fwd-modules/ezappliance/src/ezappliance/: Makefile.am  ez_corba_client.cc  ez_corba_client.h  ez_corba_structures.cc  ez_corba_structures.h  ez_packet_channel.cc  ez_packet_channel.h  get_ez_iors.sh  my_test2.cc  my_test2.h
src/xdpd/fwd-modules/ezappliance/src/idl/: Makefile.am  Proxy_Adapter.hh  Proxy_Adapter.idl  Proxy_AdapterSK.cc  configure.sh
src/xdpd/fwd-modules/ezappliance/src/io/: Makefile.am  iface_utils.cc  iface_utils.h  iomanager.cc  pktin_dispatcher.cc  pktin_dispatcher.h
src/xdpd/fwd-modules/ezappliance/src/io/packet_classifiers/: Makefile.am
src/xdpd/fwd-modules/ezappliance/src/io/ports/: Makefile.am
src/xdpd/fwd-modules/ezappliance/src/io/ports/ez_packet_channel/: Makefile.am  ioport_ez_packet_channel.cc  ioport_ez_packet_channel.h
src/xdpd/fwd-modules/ezappliance/src/io/ports/mmap/: Makefile.am
src/xdpd/fwd-modules/ezappliance/src/io/ports/mockup/: Makefile.am
src/xdpd/fwd-modules/ezappliance/src/io/ports/vlink/: Makefile.am
src/xdpd/fwd-modules/ezappliance/src/io/scheduler/: Makefile.am  epoll_ioscheduler.cc
src/xdpd/fwd-modules/ezappliance/src/pipeline-imp/: packet.cc  platform_hooks_of1x.cc  pthread_atomic_operations.c
src/xdpd/fwd-modules/ezappliance/src/processing/: Makefile.am
src/xdpd/fwd-modules/ezappliance/src/util/: Makefile.am  safevector.h
src/xdpd/fwd-modules/ezappliance/test/: Makefile.am
src/xdpd/fwd-modules/ezappliance/test/stubs/: EZ-clear-flowtable.py  EZ-corba-client.py  EZ-corba-stub.py  EZ_tcp_client.py  EZ_tcp_server.py  corbaUtils.py  deamon.py  start.sh
src/xdpd/fwd-modules/gnu_linux/src/io/: datapacketx86.cc  datapacketx86.h
src/xdpd/fwd-modules/netfpga10g/src/: bg_taskmanager.cc
src/xdpd/fwd-modules/netfpga10g/src/afa-imp/openflow/openflow12/: of12_forwarding_module.cc
src/xdpd/fwd-modules/netfpga10g/src/io/: packet_io.cc  packet_io.h
src/xdpd/fwd-modules/netfpga10g/src/netfpga/: flow_entry.c  flow_entry.h  netfpga.c  netfpga.h  ports.c  stats.c
src/xdpd/fwd-modules/netfpga10g/src/pipeline-imp/: Makefile.am  packet.cc
src/xdpd/management/plugins/config/openflow/: lsi_scope.cc
src/xdpd/openflow/openflow12/: of12_endpoint.cc  of12_translation_utils.cc  openflow12_switch.cc
