MAINTAINERCLEANFILES = Makefile.in

noinst_LTLIBRARIES = libfwd_module_gnu_linux_ezappliance.la

libfwd_module_gnu_linux_ezappliance_ladir = $(includedir)/fwd-modules/ezappliance/ezappliance

libfwd_module_gnu_linux_ezappliance_la_HEADERS =
libfwd_module_gnu_linux_ezappliance_la_SOURCES = \
	ez_packet_channel.cc \
	ez_packet_channel.h  \
	ez_corba_client.cc \
	ez_corba_client.h
